Update to latest commit

--- a/README.Rmd
+++ b/README.Rmd
@@ -41,15 +41,15 @@ suicide <- read_csv("data/suicide_2000_2019_v1.csv")
 ```{r tidy-data-2015}
 whr_2015 <- whr_2015 %>%
   mutate(Year = 2015) %>%
-  subset(select = -c(`Standard Error`,`Dystopia Residual`)) %>%
-  rename("Social Support" = "Family") %>%
-  rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
-  rename("Social support" = "Social Support") %>%
-   rename("GDP per capita" = "Economy (GDP per Capita)",
-         "Overall rank" = "Happiness Rank",
-         "Life expectancy" = "Health (Life Expectancy)") %>%
-  rename("Happiness score" = "Happiness Score") %>%
-  subset(select = -c(`Region`)) %>%
+  #subset(select = -c(`Standard Error`,`Dystopia Residual`)) %>%
+  # rename("Social Support" = "Family") %>%
+  # rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
+  # rename("Social support" = "Social Support") %>%
+  #  rename("GDP per capita" = "Economy (GDP per Capita)",
+  #        "Overall rank" = "Happiness Rank",
+  #        "Life expectancy" = "Health (Life Expectancy)") %>%
+  # rename("Happiness score" = "Happiness Score") %>%
+  # subset(select = -c(`Region`)) %>%
   clean_names()
 
 ```
@@ -62,14 +62,14 @@ whr_2015 <- whr_2015 %>%
 ```{r tidy-data-2016}
 whr_2016 <- whr_2016 %>%
 mutate(Year = 2016) %>%
-subset(select = -c(`Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`)) %>%
-rename("Social support"= "Family") %>%
-rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
-rename("Overall rank" = "Happiness Rank") %>%
-rename("Happiness score" = "Happiness Score") %>%
-rename("GDP per capita" = "Economy (GDP per Capita)") %>%
-rename("Life expectancy" = "Health (Life Expectancy)") %>%
-subset(select = -c(`Region`)) %>%
+# subset(select = -c(`Lower Confidence Interval`, `Upper Confidence Interval`, `Dystopia Residual`)) %>%
+# rename("Social support"= "Family") %>%
+# rename("Perceptions of corruption" = "Trust (Government Corruption)") %>%
+# rename("Overall rank" = "Happiness Rank") %>%
+# rename("Happiness score" = "Happiness Score") %>%
+# rename("GDP per capita" = "Economy (GDP per Capita)") %>%
+# rename("Life expectancy" = "Health (Life Expectancy)") %>%
+# subset(select = -c(`Region`)) %>%
 clean_names()
 ```
 
@@ -81,13 +81,13 @@ whr_2016 <- whr_2016 %>%
 ```{r tidy-data-2017}
 whr_2017 <- whr_2017 %>%
    mutate(Year = 2017) %>%
-   # subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) %>%
-   #    rename("Social Support"= "Family") %>%
-   #         rename("Overall rank" = "Happiness.Rank") %>%
-   #           rename("Happiness score" = "Happiness.Score") %>%
-   #           rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
-   #           rename("Life expectancy" = "Health..Life.Expectancy.") %>%
-   #           rename("Perceptions of corruption" = "Trust..Government.Corruption.") %>%
+   subset(select = -c(`Whisker.high`,`Whisker.low`,`Dystopia.Residual`)) %>%
+      # rename("Social Support"= "Family") %>%
+      #      rename("Overall rank" = "Happiness.Rank") %>%
+      #        rename("Happiness score" = "Happiness.Score") %>%
+      #        rename("GDP per capita" = "Economy..GDP.per.Capita.") %>%
+      #        rename("Life expectancy" = "Health..Life.Expectancy.") %>%
+      #        rename("Perceptions of corruption" = "Trust..Government.Corruption.") %>%
   clean_names()
 
 ```
@@ -99,11 +99,11 @@ whr_2017 <- whr_2017 %>%
 
 ```{r tidy-data-2018}
 whr_2018 <- whr_2018 %>% 
-  mutate (Year = 2018) %>%
-  rename("Freedom" = "Freedom to make life choices")%>%
-  rename("Life expectancy" = "Healthy life expectancy",
-         "Country" = "Country or region",
-         "Happiness score" = "Score") %>%
+  # mutate (Year = 2018) %>%
+  # rename("Freedom" = "Freedom to make life choices")%>%
+  # rename("Life expectancy" = "Healthy life expectancy",
+  #        "Country" = "Country or region",
+  #        "Happiness score" = "Score") %>%
   clean_names()
 ```
 
@@ -116,7 +116,7 @@ whr_2018 <- whr_2018 %>%
 
 whr_2019 <- whr_2019 %>%
    mutate (Year = 2019) %>%
-  rename("Freedom" = "freedom_to_make_life_choices") %>%
+  #rename("Freedom" = "freedom_to_make_life_choices") %>%
    #rename("Country" = "Country or region",
           #"Life expectancy" = "Healthy life expectancy",
           #"Happiness score" = "Score") %>%
