Rename countries for whr

--- a/README.Rmd
+++ b/README.Rmd
@@ -149,7 +149,21 @@ whr <- whr %>% dplyr::right_join(whr_complete)
 whr <- rbind(whr_2015, whr_2016, whr_2017, whr_2018, whr_2019) %>%
   arrange(country)
 
-#USA, UAE, UK, Cape, Verde, Syria, Bolivia, Lao, Iran, cut Somaliland, Palestine, congo (kinshasa)= DRC, Congo, central african republic=CAR, Hong Kong, 
+# cut Somaliland, northern cyprus 
+```
+
+```{r}
+whr <- whr %>%
+  mutate(country = case_when(country == "United States" ~ "USA",
+                       country == "United Kingdom" ~"UK",
+                       country == "United Arab Emirates" ~ "UAE",
+                       country == "Palestinian Territories" ~ "Palestine",
+                       country == "Congo (Kinshasa)" ~ "DRC",
+                      country == "Congo (Brazzaville)" ~ "Congo",
+                      country == "Central African Republic" ~ "CAR",
+     country == "Hong Kong S.A.R., China" ~ "Hong Kong", TRUE ~ country)) %>%
+whr_2<- subset(whr, !(country %in% c("North Cyprus", "Northern Cyprus", "Somaliland")))
+  
 ```
 
 
